[package]
name = "rzstd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.35.1", features = ["full"]}
# async-compression = { version = "0.4.5", features = ["tokio", "zstd"] }
zstd = "0.13.0"
grep-matcher = "0.1.7"
grep-regex = "0.1.12"
grep-searcher = "0.1.13"
anyhow = "1.0.76"
futures = "0.3.29"

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-gnu-gcc"
